// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMenu should attach custom listeners passed in the link definition 1`] = `
<ul
  class="ec-menu"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link ec-navigation-link--is-collapsed"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
          style="display: none;"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should not render all items as compact when horizontal is not set 1`] = `
<ul
  class="ec-menu"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link"
      data-test="ec-menu__link ec-navigation-link"
      href="/bat"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-baz-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Bat
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should not render if links are not supplied 1`] = `<!--v-if-->`;

exports[`EcMenu should not render if links are null 1`] = `<!--v-if-->`;

exports[`EcMenu should not render if links is an empty array 1`] = `<!--v-if-->`;

exports[`EcMenu should render all items as compact when is horizontal 1`] = `
<ul
  class="ec-menu ec-menu--horizontal"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link ec-navigation-link--is-compact"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link ec-navigation-link--is-compact"
      data-test="ec-menu__link ec-navigation-link"
      href="/bat"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-baz-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Bat
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should render as collapsed when isCollapsed is passed into 1`] = `
<ul
  class="ec-menu"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link ec-navigation-link--is-collapsed"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
          style="display: none;"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link ec-navigation-link--is-collapsed"
      data-test="ec-menu__link ec-navigation-link"
      href="/bat"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-baz-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
          style="display: none;"
        >
          Bat
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should render as expanded by default 1`] = `
<ul
  class="ec-menu"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link"
      data-test="ec-menu__link ec-navigation-link"
      href="/bat"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-baz-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Bat
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should render as expected when set to horizontal 1`] = `
<ul
  class="ec-menu ec-menu--horizontal"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link ec-navigation-link--is-compact"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should render as expected when set to isReverse 1`] = `
<ul
  class="ec-menu ec-menu--is-reversed"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should render as expected when set to isReverse and horizontal 1`] = `
<ul
  class="ec-menu ec-menu--is-reversed-horizontal"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link ec-navigation-link--is-compact"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;

exports[`EcMenu should render only links with a url property 1`] = `
<ul
  class="ec-menu"
  data-test="ec-menu"
>
  
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link"
      data-test="ec-menu__link foo ec-navigation-link"
      href="/foo"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-foo-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Foo
        </span>
      </transition-stub>
    </a>
  </li>
  <li
    class="ec-menu__item"
    data-test="ec-menu__item"
  >
    <a
      class="ec-menu__link ec-navigation-link"
      data-test="ec-menu__link ec-navigation-link"
      href="/bat"
    >
      <svg
        class="ec-icon ec-navigation-link__icon"
        data-test="ec-navigation-link__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-baz-icon"
        />
      </svg>
      <transition-stub
        appear="false"
        css="true"
        name="ec-navigation-link__text-fade"
        persisted="true"
      >
        <span
          class="ec-navigation-link__text"
          data-test="ec-navigation-link__text"
        >
          Bat
        </span>
      </transition-stub>
    </a>
  </li>
  
</ul>
`;
